# aspotify

./: .gitignore  Cargo.toml  README.md
examples/: get_artist.rs  get_playing.rs  recently_played.rs  refresh_file.rs
src/: authorization_url.rs  client_credentials.rs  lib.rs  util.rs
src/authorization/: auth_code_flow.rs  c_c_flow.rs  mod.rs
src/endpoints/: albums.rs  artists.rs  browse.rs  episodes.rs  follow.rs  library.rs  mod.rs  personalization.rs  player.rs  playlists.rs  search.rs  shows.rs  tracks.rs  users_profile.rs
src/model/: album.rs  analysis.rs  artist.rs  device.rs  errors.rs  mod.rs  playlist.rs  show.rs  track.rs  user.rs
